<resources>
    <string name="app_name">PrivateEconomy</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="result">Result</string>
    <string name="register_income">Register Income</string>
    <string name="see_incomes">See incomes</string>
    <string name="register_expense">Register Expense</string>
    <string name="see_expenses">See Expenses</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="income_successfully_registered">Income successfully registered!</string>
    <string name="expense_successfully_registered">Expense succesfully registered!</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="see_result">See Result</string>
    <string name="settings">Settings</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="settings_applied">Settings applied</string>
    <string name="options">Options</string>
    <string name="please_choose">Please choose</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="expense_successfully_deleted">Expense successfully deleted</string>

    <string-array name="expense_array">
        <item>Groceries</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Living</item>
        <item>Other</item>
    </string-array>

    <string-array name="income_array">
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <string-array name="currency">
        <item>Euros</item>
        <item>Pounds</item>
        <item>Dollars</item>
        <item>Swedish krona</item>
    </string-array>
</resources>
