<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/see_result_header"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/see_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_startDate"
            android:textColor="@android:color/white"
            android:text="@string/start_date"
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_below="@id/see_result_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/result_calendar_start_date"
            android:backgroundTint="@color/colorPrimaryDark"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            android:layout_below="@+id/tv_startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_endDate"
            android:textColor="@android:color/white"
            android:text="@string/end_date"
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_below="@id/result_calendar_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/result_calendar_end_date"
            android:backgroundTint="@color/colorPrimaryDark"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_endDate" />

        <Button
            android:id="@+id/btn_see_result"
            android:text="@string/see_result"
            android:theme="@style/ButtonStyle"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/result_calendar_end_date" />

    </RelativeLayout>
</ScrollView>