<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context="se.mah.m11p0121.privateeconomy.SeeExpensesActivity">

        <TextView
            android:id="@+id/tv_see_expenses"
            android:textColor="@android:color/white"
            android:text="@string/see_expenses"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_startDate"
            android:textColor="@android:color/white"
            android:text="@string/start_date"
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_below="@id/tv_see_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/see_expenses_calendar_startdate"
            android:backgroundTint="@color/colorPrimaryDark"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            android:layout_below="@id/tv_startDate"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_endDate"
            android:textColor="@android:color/white"
            android:text="@string/end_date"
            android:gravity="center"
            android:layout_margin="8dp"
            android:layout_below="@id/see_expenses_calendar_startdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/see_expenses_calendar_enddate"
            android:backgroundTint="@color/colorPrimaryDark"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            android:layout_margin="8dp"
            android:layout_below="@id/tv_endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btn_see_expenses"
            android:text="@string/see_expenses"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:theme="@style/ButtonStyle"
            android:layout_below="@id/see_expenses_calendar_enddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>