<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="se.mah.m11p0121.privateeconomy.RegisterIncomeActivity">

        <TextView
            android:id="@+id/register_income_header"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/register_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/incomeCalendar"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimaryDark"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            android:layout_below="@id/register_income_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/incomeSpinner"
            android:entries="@array/income_array"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_margin="8dp"
            android:layout_below="@id/incomeCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtIncomeTitle"
            android:hint="@string/title"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_below="@+id/incomeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtIncomeAmount"
            android:hint="@string/amount"
            android:inputType="number"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_below="@+id/edtIncomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <Button
            android:id="@+id/register_income_to_database_btn"
            android:text="@string/register_income"
            android:textColor="@android:color/white"
            android:layout_below="@+id/edtIncomeAmount"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:theme="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</ScrollView>
